--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "icc-component",
+    "name": "pipedriver-component",
     "version": "0.0.1",
-    "description": "ICC component",
-    "homepage": "https://www.typescriptlang.org/",
+    "description": "pipedriver component",
+    "homepage": "https://www.pipedriver.org/",
     "author": {
         "name": "mVISE AG",
         "email": "info@mvise.de",
         "url": "https://www.mvise.de"
     },
     "engines": {
-        "node": "^8.1.1",
-        "npm": "^5.0.3"
+        "node": "^8.3.0",
+        "npm": "^5.3.3"
     },
     "scripts": {
         "tsc": "tsc",
@@ -40,17 +40,15 @@
         "elasticio-node": "0.0.8",
         "elasticio-sailor-nodejs": "^2.1.3",
         "lodash": "^4.17.4",
-        "papaparse": "^4.3.3",
         "typescript": "^2.4.0"
     },
     "devDependencies": {
-        "@types/fs-extra": "^3.0.3",
-        "@types/jest": "^19.2.4",
+        "@types/fs-extra": "^4.0.0",
+        "@types/jest": "^20.0.7",
         "@types/lodash": "^4.14.66",
         "@types/nock": "^8.2.1",
-        "@types/node": "^7.0.31",
-        "@types/papaparse": "^4.1.29",
-        "fs-extra": "^3.0.1",
+        "@types/node": "^8.0.22",
+        "fs-extra": "^4.0.1",
         "jest": "^20.0.4",
         "nock": "^9.0.13",
         "tslint": "^5.4.3",
