--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "engines": {
         "node": "^8.3.0",
-        "npm": "^5.3.3"
+        "npm": ">=5.4"
     },
     "scripts": {
         "tsc": "tsc",
