--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
             "^.+\\.(ts|tsx)$": "<rootDir>/preprocessor.js"
         },
         "testMatch": [
-            "<rootDir>/test/actions/*.(ts|tsx|js)"
+            "<rootDir>/test/**/*.(ts|tsx|js)"
         ]
     },
     "dependencies": {
