--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://www.mvise.de"
   },
   "engines": {
-    "node": "^8.3.0",
+    "node": "12.18.3",
     "npm": ">=5.4"
   },
   "scripts": {
