--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@openintegrationhub/ferryman": "^1.1.3",
     "axios": "^0.20.0",
     "lodash": "^4.17.4",
+    "moment": "^2.29.1",
     "request": "^2.88.2",
     "typescript": "^4.0.2"
   },
